--- a/views/BusTracker.ejs
+++ b/views/BusTracker.ejs
@@ -7,7 +7,8 @@
     <script src="./scripts/map.js"></script>
     <style>
         #map {
-            height: 100%;
+            height: 50%;
+            width: 50%;
         }
 
         /* Optional: Makes the sample page fill the window. */
