set up nav bar on pages

--- a/views/BusSim.ejs
+++ b/views/BusSim.ejs
@@ -1,12 +1,13 @@
 <html>
 
 <head>
-    <title>Bus tracker</title>
+    <title>Bus sim</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
-    <h1>Live Bus Tracker</h1>
+    <%- include('../template/layout/header') %>
+    
     <div id="map"></div>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
