--- a/views/BusTracker.ejs
+++ b/views/BusTracker.ejs
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <h1>Live Bus Tracker</h1>
+        <%- include('../template/layout/header') %>
     <div id="map"></div>
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
