add bus ability

--- a/views/BusTracker.ejs
+++ b/views/BusTracker.ejs
@@ -35,7 +35,7 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFZ2FjgtItESFsLMsvmEDSCVJm_KfXOqE&callback=initMap&v=weekly"
         async></script>
 
-    asda
+    <button onclick="initMap()" >reload</button>
 
 </body>
 <script>
