--- a/template/layout/header.ejs
+++ b/template/layout/header.ejs
@@ -5,10 +5,10 @@
     <!-- Navbar -->
     <div class="w3-top">
         <div class="w3-bar w3-theme-d2 w3-left-align">
-            <a href="/bustracker" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Live Bus Tracker</a>
+            <a href="/" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Live Bus Tracker</a>
             <a href="/bussim" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Bus Sim</a>
-            <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Work</a>
-            <a href="#pricing" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Price</a>
+            <a href="/addbus" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Add Bus</a>
+            <a href="/updateroutes" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Update Routes</a>
             <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
         </div>
     </div>
