--- a/views/BusSim.ejs
+++ b/views/BusSim.ejs
@@ -11,9 +11,9 @@
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <form action="/busSim" method="POST">
         <input value="<%= buses[0].id %>" name="id" >
-        <input value="Western Approach Flats" name="nextStop" id="nextStop">
-        <input value=50.373153 name="Lat" id="Lat">
-        <input value=-4.146372 name="Lng" id="Lng">
+        <input value="<%= buses[0].busLocation.nextStop %>" name="nextStop" id="nextStop">
+        <input value="<%= buses[0].busLocation.lat %>" name="Lat" id="Lat">
+        <input value="<%= buses[0].busLocation.lng %>" name="Lng" id="Lng">
         <button>Submit</button>
 
     </form>
