--- a/template/layout/header.ejs
+++ b/template/layout/header.ejs
@@ -1,13 +1,23 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Navbar -->
     <div class="w3-top">
         <div class="w3-bar w3-theme-d2 w3-left-align">
             <a href="/" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Live Bus Tracker</a>
             <a href="/bussim" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Bus Sim</a>
-            <a href="/addbus" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Add Bus</a>
+            <a href="/busmanagement" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Add Bus</a>
             <a href="/updateroutes" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Update Routes</a>
             <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
         </div>
