added management of routes

--- a/template/layout/header.ejs
+++ b/template/layout/header.ejs
@@ -17,9 +17,8 @@
         <div class="w3-bar w3-theme-d2 w3-left-align">
             <a href="/" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Live Bus Tracker</a>
             <a href="/bussim" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Bus Sim</a>
-            <a href="/busmanagement" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Add Bus</a>
-            <a href="/updateroutes" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Update Routes</a>
-            <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
+            <a href="/busmanagement" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Bus Management</a>
+            <a href="/buses" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Bus API</a>
         </div>
     </div>
     <br>
