--- a/views/BusManagement.ejs
+++ b/views/BusManagement.ejs
@@ -29,13 +29,13 @@
             <td><%= buses[i].busLocation.lng %></td>
             <td>
                 <form action="/BusManagement" method="POST">
+                    <button class="btn btn-danger" ><i class="fa fa-trash-o" aria-hidden="true"></i></button>
                     <input hidden name="delete" value="true">
-                    
-                    <button value="<%= buses[i].id %>" name="busID" type="button" class="btn btn-danger">
-                        <i class="fa fa-trash-o" aria-hidden="true"></i>
-                    </button>
+                    <input hidden value="<%= buses[i].id %>" name="busID"> 
                 </form>
                 <button onclick="window.location.href='/updateroutes/<%=i%>'" type="button" class="btn btn-primary">Manage Routes</button>
+                <button onclick="window.location.href='/editbus/<%=i%>'" type="button" class="btn btn-primary">Edit Bus</button>
+                
             </td>
 
         </tr>
