add route management cypress ui

--- a/views/EditRoute.ejs
+++ b/views/EditRoute.ejs
@@ -11,6 +11,6 @@
         <input value="<%= buses[busIDNo].route[routeIDNo].locName %>" name="locName" id="locName" >
         <input value="<%= buses[busIDNo].route[routeIDNo].lat %>" name="lat" id="lat">
         <input value="<%= buses[busIDNo].route[routeIDNo].lng %>" name="lng" id="lng">
-        <button>Submit</button>
+        <button id="submitRoute">Submit</button>
     </form>
 </body>
