update ids cypress

--- a/views/UpdateRoutes.ejs
+++ b/views/UpdateRoutes.ejs
@@ -36,7 +36,7 @@
                 </button>
             </form>
 
-            <button onclick="window.location.href='/EditRoute?busIDNo=<%= busNo %>&routeIDNo=<%= i %>'" type="button" class="btn btn-primary">Edit route</button>
+            <button onclick="window.location.href='/EditRoute?busIDNo=<%= busNo %>&routeIDNo=<%= i %>'" id="submitRoute" type="button" class="btn btn-primary">Edit route</button>
         </td>
 
     </tr>
