--- a/views/UpdateRoutes.ejs
+++ b/views/UpdateRoutes.ejs
@@ -9,8 +9,8 @@
         <input value=50.373153 name="Lat" id="Lat">
         <input value=-4.146372 name="Lng" id="Lng">
         <input hidden value="<%= buses[busNo].id %>"" name="busID" id="busID">
-        <input value="<%=[busNo]%>" name="busNum">
-        <button>Submit</button>
+        <input hidden value="<%=[busNo]%>" name="busNum">
+        <button id="submitRoute">Submit</button>
     </form>
 
 
